# SolisAdmTool

./: README.md
.github/workflows/: CI.yml
backend/: manage.py  pyproject.toml
backend/solisadmtoll/: asgi.py  settings.py  urls.py
backend/solisadmtool/: asgi.py  settings.py  urls.py  wsgi.py
backend/solisadmtool/base/: apps.py
