[tool.poetry]
name = "backend"
version = "0.1.0"
description = "This project is going to be implemented to help the supply team to control Solis stock products."
authors = ["Jorge Luis Plautz <jorge.plautz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
