[tool.poetry]
name = "backend"
version = "0.1.0"
description = "This project is going to be implemented to help the supply team to control Solis stock products."
authors = ["Jorge Luis Plautz <jorge.plautz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
django-decouple = "^2.1"
pillow = "^10.4.0"
django-extensions = "^3.2.3"
ipython = "^8.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
